--- a/home/style.scss
+++ b/home/style.scss
@@ -51,7 +51,11 @@
     background-size:cover;
   }
   &.three{
-    background: url('../img/landing/feature-three.jpg') center center no-repeat;
+    background: url('../img/landing/feature-five.jpg') center center no-repeat;
+    background-size:cover;
+  }
+  &.four{
+    background: url('../img/landing/feature-five.jpg') center center no-repeat;
     background-size:cover;
   }
   &.video{
